--- a/FileSync/appsettings.json
+++ b/FileSync/appsettings.json
@@ -1,9 +1,14 @@
 {
-  "PathFrom": "D:\testFrom",
-  "PathTo": "D:\testTo",
-
-  "ConnectionStrings": {
-    "DevContext": "开发库",
-    "ProdContext": "生产库"
+  //文件同步配置
+  "FileSync": {
+    "PathFrom": "D:\\Work\\山东俊富",
+    "PathTo": "D:\\Sync\\Work\\山东俊富"
+  },
+  //相同文件查找
+  "SameFile": {
+    "Rule": "文件名称,文件大小,修改时间",
+    "PathFrom": "D:\\testFrom",
+    "PathTo": ""
   }
+ 
 }
