--- a/FileSync/appsettings.json
+++ b/FileSync/appsettings.json
@@ -1,14 +1,17 @@
 {
   //文件同步配置
   "FileSync": {
+    "Execute": true,
+    "Repeatedly": false,
     "PathFrom": "D:\\Work\\山东俊富",
     "PathTo": "D:\\Sync\\Work\\山东俊富"
   },
   //相同文件查找
   "SameFile": {
+    "Execute": false,
     "Rule": "文件名称,文件大小,修改时间",
     "PathFrom": "D:\\testFrom",
     "PathTo": ""
   }
- 
+
 }
