add-添加历史记录为空显示

--- a/MainApp/MainApp.csproj
+++ b/MainApp/MainApp.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Images\history.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Images\history.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\AppControlLibrary\AppControlLibrary.csproj" />
   </ItemGroup>
 
